--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   travel-map:
     build: .
     ports:
-      - "8000:8000"
+      - "4000:4000"
+    command: ["python", "-m", "http.server", "4000", "--bind", "0.0.0.0"]
     volumes:
       - .:/app
