--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # 위치 정보 파일 (비공개)
 takeout_with_location.json
 oldphotos_with.json
+oldphotos_ai_with - fixed.json
 
 # 민감 정보 스크립트 전체 무시
 scripts/실패한 방법들/**
