--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 takeout_with_location.json
 oldphotos_with.json
 oldphotos_ai_with - fixed.json
+newphotos_with.json
 
 # 민감 정보 스크립트 전체 무시
 scripts/실패한 방법들/**
